--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "registry:build": "shadcn build"
   },
   "dependencies": {
+    "@blocknote/core": "^0.41.1",
+    "@blocknote/react": "^0.41.1",
+    "@blocknote/shadcn": "^0.41.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
