--- a/site/package.json
+++ b/site/package.json
@@ -15,6 +15,7 @@
         "@blocknote/react": "^0.41.1",
         "@blocknote/shadcn": "^0.41.1",
         "@bytecodealliance/preview2-shim": "^0.17.5",
+        "@codemirror/lang-json": "^6.0.2",
         "@codemirror/lang-markdown": "^6.5.0",
         "@codemirror/language-data": "^6.5.2",
         "@dimforge/rapier3d": "^0.19.2",
