--- a/site/package.json
+++ b/site/package.json
@@ -22,6 +22,7 @@
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
+        "@floating-ui/react": "^0.27.16",
         "@hookform/resolvers": "^5.2.2",
         "@lezer/highlight": "^1.2.3",
         "@measured/puck": "^0.20.2",
@@ -35,7 +36,8 @@
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-hover-card": "^1.1.15",
-        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-icons": "^1.3.2",
+        "@radix-ui/react-label": "^2.1.8",
         "@radix-ui/react-menubar": "^1.1.16",
         "@radix-ui/react-navigation-menu": "^1.2.14",
         "@radix-ui/react-popover": "^1.1.15",
@@ -43,9 +45,9 @@
         "@radix-ui/react-radio-group": "^1.3.8",
         "@radix-ui/react-scroll-area": "^1.2.10",
         "@radix-ui/react-select": "^2.2.6",
-        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-separator": "^1.1.8",
         "@radix-ui/react-slider": "^1.3.6",
-        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-slot": "^1.2.4",
         "@radix-ui/react-switch": "^1.2.6",
         "@radix-ui/react-tabs": "^1.1.13",
         "@radix-ui/react-toggle": "^1.1.10",
@@ -53,8 +55,22 @@
         "@radix-ui/react-tooltip": "^1.2.8",
         "@radix-ui/react-use-controllable-state": "^1.2.2",
         "@rolldown/browser": "1.0.0-beta.45",
+        "@tiptap/extension-code-block-lowlight": "^3.11.0",
+        "@tiptap/extension-color": "^3.11.0",
+        "@tiptap/extension-heading": "^3.11.0",
+        "@tiptap/extension-horizontal-rule": "^3.11.0",
+        "@tiptap/extension-image": "^3.11.0",
+        "@tiptap/extension-link": "^3.11.0",
+        "@tiptap/extension-placeholder": "^3.11.0",
+        "@tiptap/extension-text-style": "^3.11.0",
+        "@tiptap/extension-typography": "^3.11.0",
+        "@tiptap/extension-underline": "^3.11.0",
+        "@tiptap/pm": "^3.11.0",
+        "@tiptap/react": "^3.11.0",
+        "@tiptap/starter-kit": "^3.11.0",
         "@uiw/codemirror-themes": "^4.25.2",
         "@uiw/react-codemirror": "^4.25.2",
+        "@use-gesture/react": "^10.3.1",
         "@use-gpu/interact": "^0.17.0",
         "@use-gpu/live": "^0.17.0",
         "@use-gpu/plot": "^0.17.0",
@@ -75,24 +91,37 @@
         "dockview-core": "^4.9.0",
         "dockview-react": "^4.9.0",
         "embla-carousel-react": "^8.6.0",
+        "fast-deep-equal": "^3.1.3",
         "flexlayout-react": "^0.8.17",
         "framer-motion": "^12.23.24",
         "golden-layout": "^2.6.0",
         "gsap": "^3.13.0",
+        "he-tree-react": "^1.2.0",
+        "immer": "^10.2.0",
         "input-otp": "^1.4.2",
         "jazz-tools": "^0.19.0",
+        "lodash.template": "^4.5.0",
+        "lowlight": "^3.3.0",
         "lucide-react": "^0.487.0",
         "motion": "^12.23.24",
         "nanoid": "^5.1.6",
         "next": "15.5.2",
         "next-themes": "^0.4.6",
+        "object-hash": "^3.0.0",
         "postprocessing": "^6.37.8",
         "react": "19.1.0",
         "react-day-picker": "^9.11.1",
         "react-dom": "19.1.0",
+        "react-error-boundary": "^6.0.0",
         "react-hook-form": "^7.66.0",
+        "react-markdown": "^10.1.0",
+        "react-medium-image-zoom": "^5.4.0",
         "react-resizable-panels": "^3.0.6",
+        "react-syntax-highlighter": "^16.1.0",
+        "react-zoom-pan-pinch": "^3.7.0",
         "recharts": "2.15.4",
+        "remark-gfm": "^4.0.1",
+        "remark-math": "^6.0.0",
         "shadcn": "^3.0.0",
         "shiki": "^3.14.0",
         "sonner": "^2.0.7",
@@ -100,31 +129,37 @@
         "tailwind-merge": "^3.3.1",
         "three": "^0.181.0",
         "tiny-invariant": "^1.3.3",
+        "tiptap-markdown": "^0.9.0",
         "tokenlens": "^1.3.1",
         "tw-animate-css": "^1.3.6",
         "use-stick-to-bottom": "^1.1.1",
         "v0-sdk": "^0.15.0",
         "vaul": "^1.1.2",
-        "zod": "^3.25.76"
+        "zod": "^3.25.76",
+        "zundo": "^2.3.0",
+        "zustand": "4.5.5"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.1",
         "@tailwindcss/postcss": "^4.1.11",
         "@tailwindcss/typography": "^0.5.19",
+        "@types/lodash.template": "^4.5.3",
         "@types/node": "^20.19.9",
+        "@types/object-hash": "^3.0.6",
         "@types/react": "19.1.2",
         "@types/react-dom": "19.1.2",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "eslint": "^9.32.0",
         "eslint-config-next": "15.3.1",
+        "react-docgen-typescript": "^2.4.0",
         "style-dictionary": "^5.1.1",
         "tailwindcss": "^4.1.16",
+        "tailwindcss-animate": "^1.0.7",
+        "ts-morph": "^27.0.2",
+        "ts-to-zod": "^5.0.1",
         "typescript": "^5.9.2"
     },
     "pnpm": {
-        "overrides": {
-            "@types/react": "19.1.2",
-            "@types/react-dom": "19.1.2"
-        },
         "onlyBuiltDependencies": [
             "@rolldown/browser",
             "@tailwindcss/oxide",
