--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "private": true,
-  "scripts": {
-    "build": "pnpm -r build",
-    "dev": "pnpm --filter @loop-kit/cli dev",
-    "release:patch": "pnpm -r version patch && pnpm -r publish --access public",
-    "release:minor": "pnpm -r version minor && pnpm -r publish --access public"
-  },
-  "dependencies": {
-    "typescript": "^5.9.3"
-  }
+    "private": true,
+    "scripts": {
+        "build": "pnpm -r build",
+        "dev": "pnpm --filter @loop-kit/cli dev",
+        "release:patch": "pnpm -r version patch && pnpm -r publish --access public",
+        "release:minor": "pnpm -r version minor && pnpm -r publish --access public"
+    },
+    "devDependencies": {
+        "typescript": "^5.9.3"
+    },
+    "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
