--- a/site/package.json
+++ b/site/package.json
@@ -24,6 +24,7 @@
         "@dnd-kit/utilities": "^3.2.2",
         "@floating-ui/react": "^0.27.16",
         "@hookform/resolvers": "^5.2.2",
+        "@legendapp/state": "^2.1.15",
         "@lezer/highlight": "^1.2.3",
         "@measured/puck": "^0.20.2",
         "@radix-ui/react-accordion": "^1.2.12",
@@ -126,6 +127,7 @@
         "shiki": "^3.14.0",
         "sonner": "^2.0.7",
         "streamdown": "^1.4.0",
+        "sury": "11.0.0-alpha.4",
         "tailwind-merge": "^3.3.1",
         "three": "^0.181.0",
         "tiny-invariant": "^1.3.3",
@@ -158,15 +160,6 @@
         "ts-morph": "^27.0.2",
         "ts-to-zod": "^5.0.1",
         "typescript": "^5.9.2"
-    },
-    "pnpm": {
-        "onlyBuiltDependencies": [
-            "@rolldown/browser",
-            "@tailwindcss/oxide",
-            "msw",
-            "sharp",
-            "unrs-resolver"
-        ]
     },
     "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
