--- a/site/package.json
+++ b/site/package.json
@@ -56,6 +56,8 @@
         "@radix-ui/react-tooltip": "^1.2.8",
         "@radix-ui/react-use-controllable-state": "^1.2.2",
         "@rolldown/browser": "1.0.0-beta.45",
+        "@tanstack/db": "^0.5.5",
+        "@tanstack/react-db": "^0.1.49",
         "@tiptap/extension-code-block-lowlight": "^3.11.0",
         "@tiptap/extension-color": "^3.11.0",
         "@tiptap/extension-heading": "^3.11.0",
@@ -82,6 +84,8 @@
         "@use-gpu/wgsl-loader": "^0.17.0",
         "@use-gpu/workbench": "^0.17.0",
         "@webcontainer/api": "^1.6.1",
+        "@xterm/addon-fit": "^0.10.0",
+        "@xterm/xterm": "^5.5.0",
         "@xyflow/react": "^12.9.2",
         "ai": "^5.0.87",
         "class-variance-authority": "^0.7.1",
@@ -119,6 +123,7 @@
         "react-medium-image-zoom": "^5.4.0",
         "react-resizable-panels": "^3.0.6",
         "react-syntax-highlighter": "^16.1.0",
+        "react-xtermjs": "^1.0.10",
         "react-zoom-pan-pinch": "^3.7.0",
         "recharts": "2.15.4",
         "remark-gfm": "^4.0.1",
