--- a/crates/loop/Cargo.toml
+++ b/crates/loop/Cargo.toml
@@ -1,26 +1,25 @@
 [package]
 name = "loop-cli"
-version.workspace = true
-edition.workspace = true
-license.workspace = true
-
-[[bin]]
-name = "loop"
-path = "src/main.rs"
+version = "0.1.0"
+edition = "2021"
 
 [dependencies]
-clap = { workspace = true }
-wasmtime = { workspace = true }
-wasmtime-wasi = { workspace = true }
-anyhow = { workspace = true }
-tokio = { workspace = true }
-notify = { workspace = true }
-tao = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-
-# Additional dependencies
-wit-bindgen = "0.19"
-wit-component = "0.20"
-futures = "0.3"
+clap = { version = "4.4", features = ["derive"] }
+wasmtime = { version = "17.0", features = ["component-model"] }
+wasmtime-wasi = "17.0"
+tao = "0.24"
+anyhow = "1.0"
+tokio = { version = "1.35", features = ["full"] }
+notify = "6.1"
+include_dir = "0.7"
+tempfile = "3.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+toml = "0.8"
+which = "6.0"
+colored = "2.0"
+indicatif = "0.17"
 crossbeam-channel = "0.5"
+
+[build-dependencies]
+include_dir = "0.7"
