--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,44 @@
+# Cargo.toml
 [workspace]
 resolver = "2"
 members = [
-  "crates/*",
+    "crates/*"
 ]
 
 [workspace.package]
-edition = "2021"
+version = "0.1.0"
+edition = "2024"
+license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
-clap = { version = "4.5", features = ["derive"] }
-wasmtime = { version = "19.0", features = ["component-model"] }
-wasmtime-wasi = "19.0"
-anyhow = "1.0"
-tokio = { version = "1.36", features = ["full"] }
-notify = "6.1"
-tao = "0.26"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+wasmtime = { version = "29", features = ["component-model", "cranelift", "async"] }
+wasmtime-wasi = "29"
+wasmtime-wasi-io = "29"
+
+# WASI GFX - these provide the host implementations
+wasi-surface-wasmtime = { git = "https://github.com/aspect-build/aspect", branch = "main" }
+wasi-graphics-context-wasmtime = { git = "https://github.com/aspect-build/aspect", branch = "main" }
+wasi-frame-buffer-wasmtime = { git = "https://github.com/aspect-build/aspect", branch = "main" }
+
+# Guest bindings
+wit-bindgen = "0.36"
+
+# CLI
+clap = { version = "4", features = ["derive", "env"] }
+console = "0.15"
+indicatif = "0.17"
+
+# Async
+tokio = { version = "1", features = ["full"] }
+futures = "0.3"
+
+# Utilities
+anyhow = "1"
+thiserror = "2"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+env_logger = "0.11"
+serde = { version = "1", features = ["derive"] }
+toml = "0.8"
+which = "7"
+walkdir = "2"
