--- a/crates/loop-runtime/Cargo.toml
+++ b/crates/loop-runtime/Cargo.toml
@@ -12,6 +12,9 @@ raw-window-handle.workspace = true
 anyhow.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
+wasi-frame-buffer-wasmtime = { workspace = true }
+wasi-graphics-context-wasmtime = { workspace = true }
+wasi-surface-wasmtime = { workspace = true }
 
 [build-dependencies]
 anyhow.workspace = true
