--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,46 +3,41 @@
 resolver = "2"
 members = [
     "crates/*",
-    "examples/*",
 ]
 
 [workspace.package]
 version = "0.1.0"
 edition = "2024"
-license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
 
+# Core WASM
+wasmtime = { version = "29", features = ["component-model", "cranelift"] }
+wit-bindgen = "0.36"
+wit-deps = "0.4"
+
+# wasi-gfx implementations
+wasi-webgpu-wasmtime = { git = "https://github.com/WebAssembly/wasi-gfx-runtime", branch = "main" }
 wasi-frame-buffer-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime", branch = "main" }
 wasi-graphics-context-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime", branch = "main" }
 wasi-surface-wasmtime = { git = "https://github.com/wasi-gfx/wasi-gfx-runtime", branch = "main" }
 
-wasmtime = { version = "29", features = ["component-model", "cranelift", "async"] }
-wasmtime-wasi = "29"
-wasmtime-wasi-io = "29"
 
-# Guest bindings
-wit-bindgen = "0.36"
+
+
+# Wasmtime WASI
+wasmtime-wasi = "29"
+wasmtime-wasi-io = "39"
 
 # CLI
-clap = { version = "4", features = ["derive", "env"] }
+clap = { version = "4", features = ["derive"] }
 console = "0.15"
-indicatif = "0.17"
+dialoguer = "0.11"
 
-# Async
-tokio = { version = "1", features = ["full"] }
-futures = "0.3"
-
-# Utilities  
+# Utilities
 anyhow = "1"
 thiserror = "2"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-env_logger = "0.11"
+tokio = { version = "1", features = ["full"] }
+futures = "0.3"
 serde = { version = "1", features = ["derive"] }
 toml = "0.8"
-which = "7"
-walkdir = "2"
-raw-window-handle = "0.6.2"
-softbuffer = "0.4.8"
-winit = "0.30.12"
