--- a/crates/loop-cli/Cargo.toml
+++ b/crates/loop-cli/Cargo.toml
@@ -10,13 +10,10 @@ path = "src/main.rs"
 
 [dependencies]
 loop-runtime = { path = "../loop-runtime" }
+
 clap.workspace = true
 console.workspace = true
-indicatif.workspace = true
+dialoguer.workspace = true
 anyhow.workspace = true
-tracing.workspace = true
-tracing-subscriber.workspace = true
 toml.workspace = true
-which.workspace = true
-walkdir.workspace = true
-serde.workspace = true
+wit-deps.workspace = true
