--- a/crates/loop-runtime/Cargo.toml
+++ b/crates/loop-runtime/Cargo.toml
@@ -4,9 +4,9 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-wasmtime.workspace = true
-wasmtime-wasi.workspace = true
-wasmtime-wasi-io.workspace = true
+wasmtime = { workspace = true }
+wasmtime-wasi = { workspace = true }
+wasmtime-wasi-io = { workspace = true }
 
 wasi-surface-wasmtime.workspace = true
 wasi-graphics-context-wasmtime.workspace = true
