--- a/crates/loop-cli/Cargo.toml
+++ b/crates/loop-cli/Cargo.toml
@@ -10,10 +10,11 @@ path = "src/main.rs"
 
 [dependencies]
 loop-runtime = { path = "../loop-runtime" }
-
 clap.workspace = true
 console.workspace = true
 dialoguer.workspace = true
 anyhow.workspace = true
 toml.workspace = true
 wit-deps.workspace = true
+
+tera = "1.20.1"
