--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -4,10 +4,14 @@
     "private": true,
     "scripts": {
         "dev": "next dev --turbopack",
-        "build": "next build",
+        "build": "pnpm run registry:build && next build",
         "start": "next start",
         "lint": "next lint",
-        "registry:build": "shadcn build"
+        "registry:build": "shadcn build",
+        "registry:url": "node scripts/set-registry-homepage.mjs",
+        "vercel:build": "pnpm run build",
+        "deploy:vercel:preview": "vercel pull --yes --environment=preview && vercel build && vercel deploy --prebuilt",
+        "deploy:vercel:prod": "vercel pull --yes --environment=production && vercel build --prod && vercel deploy --prebuilt --prod"
     },
     "dependencies": {
         "@atlaskit/pragmatic-drag-and-drop": "^1.7.7",
@@ -71,6 +75,7 @@
         "@tiptap/pm": "^3.11.0",
         "@tiptap/react": "^3.11.0",
         "@tiptap/starter-kit": "^3.11.0",
+        "@types/three": "^0.182.0",
         "@uiw/codemirror-themes": "^4.25.2",
         "@uiw/react-codemirror": "^4.25.2",
         "@use-gesture/react": "^10.3.1",
@@ -150,6 +155,7 @@
         "@eslint/eslintrc": "^3.3.1",
         "@tailwindcss/postcss": "^4.1.11",
         "@tailwindcss/typography": "^0.5.19",
+        "@types/hast": "^3.0.4",
         "@types/lodash.template": "^4.5.3",
         "@types/node": "^20.19.9",
         "@types/object-hash": "^3.0.6",
@@ -164,7 +170,8 @@
         "tailwindcss-animate": "^1.0.7",
         "ts-morph": "^27.0.2",
         "ts-to-zod": "^5.0.1",
-        "typescript": "^5.9.2"
+        "typescript": "^5.9.2",
+        "vercel": "^39.4.0"
     },
     "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
